[gd_scene load_steps=9 format=3 uid="uid://rt4jo310ctba"]

[ext_resource type="Texture2D" uid="uid://2ejijx5xdofs" path="res://assets/brackeys_platformer_assets/sprites/knight.png" id="1_p10h0"]
[ext_resource type="Script" path="res://src/actor/test_actor.gd" id="1_ukf4f"]
[ext_resource type="Texture2D" uid="uid://cyftityv7ykkn" path="res://icon.svg" id="3_pvveg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s3thd"]
atlas = ExtResource("1_p10h0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oql35"]
atlas = ExtResource("1_p10h0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jlit"]
atlas = ExtResource("1_p10h0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlhof"]
atlas = ExtResource("1_p10h0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3fmgk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3thd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oql35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jlit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlhof")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="TestActor" type="Node2D"]
script = ExtResource("1_ukf4f")
attack_amount = 20
behavior_amount = 7
max_health = 3000
avoid = 5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(16, 12)
sprite_frames = SubResource("SpriteFrames_3fmgk")
autoplay = "default"
frame_progress = 0.0435868

[node name="control_actor" type="Control" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 3
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="show_skill_btn" type="Button" parent="control_actor"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -9.0
offset_right = 9.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(8, 8)
scale = Vector2(0.125, 0.125)
texture_normal = ExtResource("3_pvveg")

[connection signal="pressed" from="control_actor/show_skill_btn" to="." method="_on_show_skill_btn_pressed"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
